fixed spacing

--- a/client/src/app/main-menu/main-menu.component.css
+++ b/client/src/app/main-menu/main-menu.component.css
@@ -36,8 +36,8 @@ h3 {
 }
 
 .separator {
-    margin-top: 2%;
-    margin-bottom: 2%;
+    margin-top: 1.5%;
+    margin-bottom: 1.5%;
 }
 
 #startGameButton{
@@ -63,9 +63,7 @@ h3 {
 #nameInput {
     margin-bottom: 1%;
 }
-#infoButtonContainer{
-    padding-top: 5px;
-}
+
 .buttonPadding {
     padding-top: 1.2%;
     padding-bottom: 1.2%;
